<resources>
    <string name="app_name">Clima</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="usuario">Usuario</string>
    <string name="toolUsuario">Ingresar usuario</string>
    <string name="password">Contraseña</string>
    <string name="toolPassword">Ingresar contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="errorLogin">Usuario o contraseña incorrecto/a</string>
    <string name="dia">Día</string>
    <string name="noche">Noche</string>
    <string name="correo">Correo</string>
    <string name="ingreseUsuario">Ingresar Usuario</string>
    <string name="ingreseContrasena">Ingresar Contraseña</string>
    <string name="ingreseCorreo">Ingresar Correo</string>
    <string name="crear">Crear</string>
    <string name="registrar">Registrar</string>
    <string name="crearUSuario">Crear usuario</string>
    <string name="ingresoNoValido">Usuario o contraseña no valido</string>
    <string name="mantenerIniciado">Mantener sesión abierta</string>
    <string name="errorEliminarUsuario">No se pudo eliminar el usuario</string>
    <string name="usuarioEliminado">Se elimino correctamente</string>
    <string name="nombreMenor5Letras">El nombre de usuario debe tener al menos 5 letras</string>
    <string name="contrasenaMenor6Letras">La contraseña no debe tener mínimo 6 caracteres</string>
    <string name="emailIncorrecto">El correo no tiene un formato valido</string>
    <string name="ingresarContrasenaDe">Ingrese contraseña de</string>
    <string name="nombreMayor15Letras">El nombre no puede tener mas de 15 letras</string>
    <string name="contrasenaMayor20Letras">La contraseña no puede ser mayor de 20 letras</string>
    <string name="nombreNoValido">El nombre solo puede tener letras, números y \"_\"</string>
    <string name="contrasenaNoValido">La contraseña solo puede tener letras, números y \"_\"</string>
    <string name="correoNoValido">El correo solo puede tener letras, números y \"_\"</string>
    <string name="navigation_drawer_close">CLOSE</string>
    <string name="navigation_drawer_open">OPEN</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="home">Home</string>
    <string name="masDetalles">Más detalles</string>
    <string name="mapa">Mapa</string>
    <string name="cerrarSesionMensaje">¿Esta seguro de cerrar sesión?</string>
    <string name="eliminarUsuarioMensaje">¿Esta seguro de eliminar el usuario?</string>
    <string name="ACEPTAR">ACEPTAR</string>
    <string name="CANCELAR">CANCELAR</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="contrasena">Contraseña</string>
    <string name="guardar">Guardar Cambios</string>
    <string name="usuarioYaExiste">El usuario ya existe</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregarImagen">Agregar Imagen</string>
    <string name="guardado">Guardado</string>
    <string name="Notificaciones">Notificaciones:</string>
    <string name="activarNotificaciones">Activar Notificaciones</string>
    <string name="unidadTemperatura">Unidad de Temperatura:</string>
    <string name="seleccioneHoraNotificacion">Seleccione la hora de Notificación</string>
    <string name="mailADesarrollador">Envianos un e-mail</string>
    <string name="enviarEmail">Enviar e-mail...</string>
    <string name="noClientesEmail">No hay clientes e-mail instalados</string>
    <string name="asuntoPorDefecto">E-mail a Desarrollador para...</string>
    <string name="configuracionGuardada">Configuracion Guardada</string>
    <string name="configuracionNoGuardada">Configuracion No Guardada</string>
    <string name="no_internet">No hay conexión a internet</string>
    <string name="reintentar">Reintentar</string>
    <string name="Enero">Enero</string>
    <string name="Febrero">Febrero</string>
    <string name="Marzo">Marzo</string>
    <string name="Abril">Abril</string>
    <string name="Mayo">Mayo</string>
    <string name="Junio">Junio</string>
    <string name="Julio">Julio</string>
    <string name="Agosto">Agosto</string>
    <string name="Septiembre">Septiembre</string>
    <string name="Octubre">Octubre</string>
    <string name="Noviembre">Noviembre</string>
    <string name="Diciembre">Diciembre</string>
    <string name="channel_description">Description</string>
    <string name="notification_message">mensaje</string>
    <string name="temperaturaMaxima">T.Máx:</string>
    <string name="temperaturaMinima">T.Mín:</string>
    <string name="buscar">Buscar</string>
    <string-array name="unidades">
        <item>metric (ºC)</item>
        <item>imperial (ºF)</item>
        <item>standard (ºK)</item>
    </string-array>
</resources>
