<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        style="@style/textoCentradoM"/>

    <EditText
        android:id="@+id/nuevoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreseUsuario"
        style="@style/inputText"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/textoCentradoM"/>

    <EditText
        android:id="@+id/nuevaPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreseContrasena"
        android:inputType="textPassword"
        style="@style/inputText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        style="@style/textoCentradoM"/>

    <EditText
        android:id="@+id/nuevoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/ingreseCorreo"
        style="@style/inputText"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        style="@style/BotonAgregar"
        android:layout_marginBottom="@dimen/marginM"/>
</LinearLayout>