<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginM"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_gravity="center"
            android:layout_width="122dp"
            android:layout_height="122dp"
            android:src="@drawable/avatar"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButtonCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            app:srcCompat="@drawable/ic_camera"
            android:layout_alignBottom="@+id/profile_image"
            android:layout_alignRight="@+id/profile_image"
            />
    </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            style="@style/textoCentradoM"/>

        <EditText
            android:id="@+id/nombrePerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingreseUsuario"
            style="@style/inputText"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            style="@style/textoCentradoM"/>

        <EditText
            android:id="@+id/contrasenaPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingreseContrasena"
            android:inputType="textPassword"
            style="@style/inputText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            style="@style/textoCentradoM"/>

        <EditText
            android:id="@+id/correoPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ingreseCorreo"
            style="@style/inputText"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnModificarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            style="@style/BotonAgregar"
            android:layout_marginBottom="@dimen/marginM"/>


    </LinearLayout>
</ScrollView>