<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginLeft="@dimen/marginL"
        android:text="@string/unidadTemperatura"/>
    <TextSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ></TextSwitcher>

    <CheckBox
        android:id="@+id/actNotificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activarNotificaciones"
        android:layout_marginTop="@dimen/marginL"
        android:layout_marginStart="@dimen/marginL"
        android:checked="true"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/seleccioneHoraNotificacion"
    android:layout_marginLeft="@dimen/marginL"></TextView>
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tooltipText="Seleccione Hora"/>

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/marginL"
       android:text="@string/ACEPTAR"
       style="@style/BotonAceptar"></Button>

</LinearLayout>